# HIPPO

./: .gitignore  LICENSE  README.md  pyproject.toml
hippo/: __init__.py  camelyon_utils.py  search.py
hippo/models/: __init__.py  abmil.py
